Herp spacing fixes

--- a/assets/scss/_index.scss
+++ b/assets/scss/_index.scss
@@ -101,7 +101,7 @@ $font-secondary: 'Koulen', sans-serif;
 @media (min-width: 970px) {
     #hero {
         padding-bottom: 136px;
-        background-position: bottom 12px right 100px;
+        background-position: bottom 10px right 100px;
     }
 }
 
